--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,6 @@
 .social {
   display: flex;
-  padding-top: 20px;
+  padding-top: 25px;
   padding-bottom: 10px;
   padding-left: 78px;
   padding-right: 69px;
@@ -51,6 +51,8 @@
   @media (min-width: @tablet-width) {
     width: 23px;
     height: 23px;
+    margin-top: 0;
+    margin-left: 2px;
   }
 }
 
