--- a/source/less/blocks/addition.less
+++ b/source/less/blocks/addition.less
@@ -1,6 +1,20 @@
 .addition-list {
+  position: relative;
   margin-bottom: 62px;
   width: 280px;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: -10px;
+    height: 1px;
+    width: 100%;
+    background-color: #ededed;
+
+    @media (min-width: @tablet-width) {
+      height: 0;
+    }
+  }
 
   @media (min-width: @tablet-width) {
     width: 708px;
@@ -45,7 +59,7 @@
     background-color: #68b738;
     position: absolute;
     z-index: 1;
-    width: 100vw;
+    width: 95vw;
     left: 0;
     top: 19px;
 
@@ -80,7 +94,7 @@
 
   @media (min-width: @desktop-width) {
     margin-left: -25px;
-    margin-bottom: 79px;
+    margin-bottom: 75px;
   }
 }
 
@@ -154,6 +168,20 @@
 
 .addition-item {
   margin-top: 37px;
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: -27px;
+    height: 1px;
+    width: 100%;
+    background-color: #ededed;
+
+    @media (min-width: @tablet-width) {
+      height: 0;
+    }
+  }
 
   @media (min-width: @tablet-width) {
     margin-top: 0;
@@ -180,8 +208,8 @@
 .addition-item__button {
   padding-top: 8px;
   padding-bottom: 8px;
-  padding-left: 108px;
-  padding-right: 108px;
+  padding-left: 109px;
+  padding-right: 109px;
 
   @media (min-width: @tablet-width) {
     flex-grow: 1;
