--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -12,19 +12,21 @@
     padding-left: 30px;
     padding-right: 30px;
     margin-bottom: 0;
+    border-bottom: 1px solid #f2f2f2;
   }
 
   @media (min-width: @desktop-width) {
     width: 1220px;
     padding-left: 40px;
     padding-right: 40px;
+    border: none;
   }
 }
 
 .features__item {
   position: relative;
   padding-left: 80px;
-  margin-bottom: 25px;
+  margin-bottom: 27px;
   font-family: "Arial", "Helvetica", sans-serif;
   font-weight: lighter;
   font-size: 14px;
@@ -34,7 +36,7 @@
   &::before {
     content: "";
     position: absolute;
-    top: -3px;
+    top: 0;
     left: 0;
     width: 60px;
     height: 60px;
@@ -53,7 +55,7 @@
     position: relative;
     font-size: 16px;
     line-height: 24px;
-    padding-top: 110px;
+    padding-top: 113px;
     padding-right: 100px;
     padding-bottom: 103px;
     padding-left: 0;
@@ -66,24 +68,44 @@
     padding-right: 0;
     margin-right: 2px;
     width: 244px;
-    padding-top: 121px;
+    padding-top: 113px;
   }
 }
 
 .features__item--healthy::before {
   background-image: url("../img/advantage-leaf@1x.png");
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-leaf@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 .features__item--cooking::before {
   background-image: url("../img/advantage-powder@1x.png");
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-powder@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 .features__item--apply::before {
   background-image: url("../img/advantage-dining@1x.png");
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-dining@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 .features__item--quick::before {
   background-image: url("../img/advantage-clock@1x.png");
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/advantage-clock@2x.png");
+    background-size: 50px auto;
+  }
 }
 
 .features__item:nth-child(3),
@@ -103,13 +125,13 @@
 
   @media (min-width: @tablet-width) {
     margin-top: 42px;
-    margin-bottom: 60px;
+    margin-bottom: 70px;
     font-size: 60px;
     line-height: 60px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-top: 54px;
+    margin-top: 44px;
   }
 }
 
