--- a/source/less/blocks/food-price.less
+++ b/source/less/blocks/food-price.less
@@ -3,7 +3,8 @@
   font-size: 14px;
   font-weight: lighter;
   text-transform: uppercase;
-  margin-left: 50px;
+  margin-top: 5px;
+  margin-left: 47px;
 
   @media (min-width: @tablet-width) {
     position: absolute;
