--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -22,7 +22,7 @@
     width: 708px;
     padding-left: 30px;
     padding-right: 30px;
-    margin-bottom: 55px;
+    margin-bottom: 50px;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -41,8 +41,8 @@
   display: flex;
   flex-direction: column;
   margin-bottom: 6px;
-  padding-bottom: 40px;
-  padding-top: 25px;
+  padding-bottom: 38px;
+  padding-top: 32px;
 
   &::after {
     content: "";
@@ -73,12 +73,12 @@
   }
 
   @media (min-width: @tablet-width) {
-    margin-top: 151px;
+    margin-top: 157px;
     border: 1px solid #ededed;
-    width: 294px;
+    width: 293px;
     padding-right: 30px;
-    top: -7px;
-    height: 366px;
+    top: -11px;
+    height: 360px;
     position: relative;
   }
 
@@ -110,5 +110,9 @@
 }
 
 .page-catalog {
-  margin-bottom: 79px;
+  margin-bottom: 30px;
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 81px;
+  }
 }
