--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,7 +1,3 @@
-.page-footer {
-  background-color: #f2f2f2;
-}
-
 .page-footer__container {
   width: 280px;
   margin-left: auto;
@@ -44,6 +40,10 @@
   @media (min-width: @tablet-width) {
     padding-top: 40px;
     border: none;
-    margin-top: -20px;
+    margin-top: -14px;
   }
+}
+
+.page-footer--form {
+  background-color: #f2f2f2
 }
