--- a/source/less/blocks/special-offer.less
+++ b/source/less/blocks/special-offer.less
@@ -3,10 +3,15 @@
   margin-top: 20px;
   .container();
   background-image: url("../img/gift-photo-mobile@1x.jpg");
+  background-size: contain;
   background-repeat: no-repeat;
   width: 240px;
   height: 290px;
   margin-bottom: 36px;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+  }
 
   &::after {
     content: "";
@@ -33,12 +38,18 @@
   @media (min-width: @tablet-width) {
     width: 668px;
     height: 198px;
-    background-size: cover;
+    background-size: contain;
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
     background-position: center center;
     margin-bottom: 76px;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/gift-photo-tablet@2x.jpg");
+    }
   }
 
   @media (min-width: @desktop-width) {
+    background-image: url("../img/gift-photo-mobile@1x.jpg");
     position: absolute;
     right: 15px;
     top: 96px;
@@ -50,6 +61,11 @@
     padding-bottom: 0;
     margin-bottom: 0;
     text-align: center;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/gift-photo-mobile@2x.jpg");
+      background-size: 290px;
+    }
   }
 }
 
