--- a/source/less/blocks/dietary.less
+++ b/source/less/blocks/dietary.less
@@ -173,7 +173,6 @@
 
 .dietary:nth-child(2) {
   .dietary__title {
-
     &::before {
       top: 21px;
 
@@ -187,7 +186,7 @@
       }
     }
 
-    &::after {
+    &:after {
       top:32px;
 
       @media (min-width: @tablet-width) {
