--- a/source/less/blocks/proof.less
+++ b/source/less/blocks/proof.less
@@ -125,7 +125,7 @@
 
   @media screen and (min-width: @tablet-width) {
     width: 686px;
-    content: url(../img/before-tablet@1x.png);
+    content: url("../img/before-tablet@1x.png");
     margin-top: 0;
     top: 449px;
     margin-left: -336px;
