--- a/source/less/blocks/dietary.less
+++ b/source/less/blocks/dietary.less
@@ -186,8 +186,8 @@
       }
     }
 
-    &:after {
-      top:32px;
+    &::after {
+      top: 32px;
 
       @media (min-width: @tablet-width) {
         top: 134px;
