--- a/source/less/blocks/dietary.less
+++ b/source/less/blocks/dietary.less
@@ -32,7 +32,7 @@
     top: 8px;
     width: 24px;
     height: 11px;
-    background-image: url(../img/icon-right-arrow-long.svg);
+    background-image: url("../img/icon-right-arrow-long.svg");
 
     @media (min-width: @tablet-width) {
       left: 161px;
@@ -75,17 +75,17 @@
     }
   }
 
-&:active {
-  color: rgba(17, 17, 17, 0.3);
+    &:active {
+      color: rgba(17, 17, 17, 0.3);
 
-  &::before {
-    opacity: 0.3;
-  }
+      &::before {
+        opacity: 0.3;
+      }
 
-  &::after {
-    opacity: 0.3;
-  }
-}
+      &::after {
+        opacity: 0.3;
+      }
+    }
 
 
   @media (min-width: @tablet-width) {
