--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -229,6 +229,7 @@
   &::before {
     opacity: 0.3;
   }
+
   &::after {
     opacity: 0.3;
   }
@@ -265,28 +266,28 @@
 }
 
 .form__radio:checked + .form__label::after {
-    content: "";
-    position: absolute;
+  content: "";
+  position: absolute;
+  top: 14px;
+  left: 9px;
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  background-color: #68b738;
+
+  @media (min-width: @tablet-width) {
     top: 14px;
-    left: 9px;
-    height: 12px;
-    width: 12px;
-    border-radius: 50%;
-    background-color: #68b738;
+    left: -3px;
+    height: 18px;
+    width: 18px;
+  }
 
-    @media (min-width: @tablet-width) {
-      top: 14px;
-      left: -3px;
-      height: 18px;
-      width: 18px;
-    }
-
-    @media (min-width: @desktop-width) {
-      top: 14px;
-      left: -5px;
-      height: 18px;
-      width: 18px;
-    }
+  @media (min-width: @desktop-width) {
+    top: 14px;
+    left: -5px;
+    height: 18px;
+    width: 18px;
+  }
 }
 
 
@@ -299,7 +300,7 @@
     left: 5px;
     width: 21px;
     height: 16px;
-    background-image: url(../img/icon-tick.svg);
+    background-image: url("../img/icon-tick.svg");
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
@@ -309,16 +310,6 @@
       height: 18px;
     }
   }
-}
-
-.form__checkbox:hover + .form__label {
-  &::before {
-    border: 1px solid #bababa;
-  }
-}
-
-
-.form__checkbox:checked + .form__label {
   outline: none;
 
   &::before {
@@ -326,6 +317,11 @@
   }
 }
 
+.form__checkbox:not(:checked):hover + .form__label {
+  &::before {
+    border: 1px solid #bababa;
+  }
+}
 
 .form__checkbox:active + .form__label {
   &::before {
