--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -112,7 +112,7 @@
   }
 
   .main-nav__toggle {
-    background-image: url(../img/icon-close.svg);
+    background-image: url("../img/icon-close.svg");
     background-repeat: no-repeat;
   }
 }
