--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -25,7 +25,7 @@
       position: absolute;
       left: 0;
       right: 0;
-      height: 0px;
+      height: 0;
       background-color: #68b738;
       z-index: 3;
 
