--- a/source/less/blocks/features.less
+++ b/source/less/blocks/features.less
@@ -133,7 +133,7 @@
     font-size: 281px;
     line-height: 405px;
     color: #f2f2f2;
-    transform: scale(.9, 1.12);
+    transform: scale(0.9, 1.12);
     z-index: -2;
   }
 
