Bugs were closed

--- a/source/less/blocks/addition.less
+++ b/source/less/blocks/addition.less
@@ -139,6 +139,7 @@
 }
 
 .addition-item__title {
+  color: #222222;
   font-size: 16px;
   line-height: 20px;
   color: #111111;
@@ -169,6 +170,7 @@
 .addition-item {
   margin-top: 37px;
   position: relative;
+  color: #444444;
 
   &::after {
     content: "";
