--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -110,9 +110,14 @@
 }
 
 .page-catalog {
-  margin-bottom: 30px;
+  margin-bottom: 3px;
+  overflow: hidden;
+
+  @media (min-width: @tablet-width) {
+    margin-top: -18px;
+  }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 81px;
+    margin-bottom: 13px;
   }
 }
