--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -27,3 +27,11 @@
     margin-top: 78px;
   }
 }
+
+.page-form {
+  overflow: hidden;
+  @media (min-width: @tablet-width) {
+    overflow: hidden;
+    margin-top: -20px;
+  }
+}
