--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -210,18 +210,12 @@
 }
 
 .form__radio {
-  display: none;
+  opacity: 0;
 }
 
 .form__radio:hover + .form__label {
   &::before {
     border: 1px solid #bababa;
-  }
-}
-
-.form__radio:checked + .form__label {
-  &::before {
-    border: 1px solid black;
   }
 }
 
@@ -262,6 +256,15 @@
   @media (min-width: @desktop-width) {
     top: 3px;
     left: -16px;
+  }
+}
+
+
+.form__radio + .form__label:focus {
+  outline: none;
+
+  &::before {
+    border: 1px solid #222222;
   }
 }
 
@@ -308,11 +311,6 @@
       height: 18px;
     }
   }
-  outline: none;
-
-  &::before {
-    border: 1px solid black;
-  }
 }
 
 .form__checkbox:not(:checked):hover + .form__label {
@@ -328,6 +326,14 @@
 
   &::after {
     opacity: 0.3;
+  }
+}
+
+.form__checkbox + .form__label:focus {
+  outline: none;
+
+  &::before {
+    border: 1px solid #222222;
   }
 }
 
@@ -379,7 +385,7 @@
     order: 2;
     position: absolute;
     z-index: 1;
-    width: 95vw;
+    width: 100vw;
 
     @media (min-width: @tablet-width) {
       margin-top: 15px;
