--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -116,3 +116,13 @@
     background-repeat: no-repeat;
   }
 }
+
+.main-nav--links-nojs {
+  .menu__list {
+    display: block;
+
+    @media (min-width: @tablet-width) {
+      display: flex;
+    }
+  }
+}
