--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -54,6 +54,7 @@
   align-self: center;
   font-size: 0;
   background-image: url("../img/icon-plus-mobile.svg");
+  background-color: white;
   background-repeat: no-repeat;
   text-decoration: none;
   width: 30px;
