--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -35,8 +35,12 @@
   }
 
   @media (min-width: @tablet-width) {
-    padding-top: 15px;
+    padding-top: 9px;
     border: none;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 22px;
   }
 }
 
@@ -48,7 +52,11 @@
   @media (min-width: @tablet-width) {
     padding-top: 40px;
     border: none;
-    margin-top: -14px;
+    margin-top: -11px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: -17px;
   }
 }
 
