--- a/source/less/blocks/slogan.less
+++ b/source/less/blocks/slogan.less
@@ -6,6 +6,7 @@
   text-align: center;
 
   @media (min-width: @tablet-width) {
+    margin-bottom: 0;
     padding-top: 20px;
     position: relative;
     width: @tablet-width;
@@ -14,7 +15,6 @@
     color: black;
     margin-left: auto;
     margin-right: auto;
-    margin-top: -30px;
   }
 
   @media (min-width: @desktop-width) {
@@ -24,14 +24,14 @@
 }
 
 .slogan__text {
-  background-image: url("../img/index-background-mobile@1x.jpg"), linear-gradient(to bottom, #65a93c 305px, #ffffff 306px);
+  background-image: url("../img/index-background-mobile@1x.jpg"), linear-gradient(to bottom, #65a93c 306px, #ffffff 306px);
   background-position: center 0;
   background-repeat: no-repeat;
   background-color: #64a83b;
-  min-height: 303px;
+  min-height: 306px;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
-    background-image: url("../img/index-background-mobile@2x.jpg"), linear-gradient(to bottom, #65a93c 305px, #ffffff 306px);
+    background-image: url("../img/index-background-mobile@2x.jpg"), linear-gradient(to bottom, #65a93c 306px, #ffffff 306px);
     background-size: contain;
   }
 
@@ -48,20 +48,21 @@
   font-size: 36px;
   font-style: normal;
   font-weight: normal;
-  line-height: 40px;
-  padding-top: 22px;
+  line-height: 36px;
+  padding-top: 30px;
 
   @media (min-width: @tablet-width) {
+    padding-top: 0;
     width: 500px;
     font-size: 60px;
     line-height: 60px;
-    margin-left: 115px;
-    margin-top: 12px;
+    margin-left: 117px;
+    margin-top: 9px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 7px;
-    padding-top: 86px;
+    padding-left: 3px;
+    padding-top: 61px;
     text-align: left;
   }
 }
@@ -73,18 +74,18 @@
   line-height: 18px;
   padding-left: 59px;
   padding-right: 59px;
-  margin-top: 19px;
+  margin-top: 22px;
   text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
     padding: 0;
     font-size: 20px;
-    margin-left: 115px;
-    margin-top: 40px;
+    margin-left: 117px;
+    margin-top: 42px;
   }
 
   @media (min-width: @desktop-width) {
-    padding-left: 5px;
-    margin-top: 43px;
+    padding-left: 3px;
+    margin-top: 41px;
   }
 }
