--- a/source/less/blocks/cat-info.less
+++ b/source/less/blocks/cat-info.less
@@ -4,7 +4,16 @@
 
   div {
     @media (min-width: @tablet-width) {
-      margin-bottom: 15px;
+      margin-bottom: 20px;
+    }
+  }
+}
+
+.cat-info__weight {
+  label {
+    margin-right: 17px;
+    @media (min-width: @tablet-width) {
+      margin-right: 22px;
     }
   }
 }
