--- a/source/less/blocks/catalog-item.less
+++ b/source/less/blocks/catalog-item.less
@@ -1,6 +1,6 @@
 .catalog-item {
   position: relative;
-  padding-bottom: 17px;
+  padding-bottom: 22px;
   display: flex;
   flex-wrap: wrap;
 
@@ -45,7 +45,7 @@
 
   @media (min-width: @desktop-width) {
     width: 245px;
-    padding-bottom: 49px;
+    padding-bottom: 50px;
   }
 }
 
@@ -54,6 +54,7 @@
 }
 
 .catalog-item__button {
+  margin-top: -6px;
   padding-top: 9px;
   padding-bottom: 9px;
   padding-left: 110px;
@@ -65,6 +66,7 @@
     width: 230px;
     padding-left: 94px;
     padding-right: 94px;
+    padding-bottom: 6px;
     margin: 0;
     margin-left: 38px;
     margin-right: 24px;
@@ -72,8 +74,8 @@
 
   @media (min-width: @desktop-width) {
     width: 175px;
-    padding-left: 52px;
-    padding-right: 55px;
+    padding-left: 54px;
+    padding-right: 54px;
     padding-top: 8px;
     padding-bottom: 8px;
   }
@@ -85,7 +87,7 @@
   font-size: 12px;
   margin-top: 10px;
   margin-bottom: 0;
-  line-height: 1.28em;
+  line-height: 15px;
   font-weight: 400;
 }
 
@@ -112,6 +114,7 @@
   @media (min-width: @desktop-width) {
     padding-left: 5px;
     padding-right: 20px;
+    margin-top: 31px;
   }
 }
 
@@ -141,7 +144,6 @@
 }
 
 .catalog-item__text {
-  margin-bottom: 18px;
   width: 140px;
 
   @media (min-width: @tablet-width) {
@@ -162,5 +164,103 @@
 
   @media (min-width: @tablet-width) {
     width: auto;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: -4px;
+  }
+}
+
+.catalog-item:nth-child(2) {
+  padding-bottom: 23px;
+
+  .catalog-item__button {
+    margin-top: -5px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 46px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 52px;
+  }
+}
+
+.catalog-item:nth-child(3) {
+  padding-bottom: 23px;
+
+  .catalog-item__button {
+    margin-top: -4px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 46px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 52px;
+  }
+}
+
+.catalog-item:nth-child(4) {
+  padding-bottom: 23px;
+
+  .catalog-item__button {
+    margin-top: -5px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 46px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 49px;
+    .catalog-item__title {
+      margin-top: 31px;
+    }
+  }
+}
+
+.catalog-item:nth-child(5) {
+
+  @media (min-width: @desktop-width) {
+
+    .catalog-item__title {
+      margin-top: 32px;
+    }
+  }
+}
+
+
+
+.catalog-item:nth-child(6) {
+  padding-bottom: 23px;
+
+  .catalog-item__button {
+    margin-top: -3px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-bottom: 46px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 52px;
+
+    .catalog-item__title {
+      margin-top: 32px;
+    }
+  }
+}
+
+.catalog-item:nth-child(7) {
+
+  @media (min-width: @desktop-width) {
+    padding-bottom: 52px;
+
+    .catalog-item__title {
+      margin-top: 32px;
+    }
   }
 }
