--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -1,24 +1,33 @@
 .comment {
   border: 0;
   padding: 0;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 28px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 30px;
+  }
 }
 
 .comment__info {
-  padding-top: 4px;
+  padding-top: 3px;
+  border-width: 1px;
   text-align: center;
   border-style: solid;
   border-color: #e6e6e6;
   font-family: "Oswald", "Arial", sans-serif;
-  width: 259px;
-  height: 140px;
-  padding-left: 10px;
+  width: 272px;
+  height: 143px;
+  padding-left: 3px;
   font-size: 16px;
   line-height: 38px;
   text-transform: uppercase;
 
   @media (min-width: @tablet-width) {
     width: 611px;
-    height: 165px;
+    height: 167px;
     text-align: left;
     font-size: 20px;
     line-height: 38px;
@@ -39,7 +48,7 @@
   display: flex;
   align-items: flex-start;
   margin-top: 0;
-  margin-bottom: 33px;
+  margin-bottom: 35px;
   font-size: 24px;
   line-height: 24px;
   font-weight: 400;
