--- a/source/less/blocks/contacts.less
+++ b/source/less/blocks/contacts.less
@@ -9,7 +9,7 @@
 
   @media (min-width: @tablet-width) {
     width: 165px;
-    padding-top: 15px;
+    padding-top: 20px;
     padding-left: 40px;
     font-size: 20px;
     line-height: 25px;
@@ -30,7 +30,7 @@
   border: none;
 
   @media (min-width: @tablet-width) {
-    height: 417px;
+    height: 394px;
   }
 }
 
@@ -46,14 +46,15 @@
   width: 280px;
   padding-left: 20px;
   padding-right: 20px;
+  padding-bottom: 12px;
   .container();
 
   @media (min-width: @tablet-width) {
     width: 708px;
     padding-left: 30px;
     padding-right: 30px;
-    padding-top: 35px;
-    padding-bottom: 44px;
+    padding-top: 30px;
+    padding-bottom: 42px;
   }
 
   @media (min-width: @desktop-width) {
@@ -68,30 +69,32 @@
   }
 }
 
-.contacts__info--form {
-  padding-bottom: 16px;
-  align-items: stretch;
+.contacts--form {
+  background-color: #f2f2f2;
+}
 
-  @media (min-width: @tablet-width) {
-    padding-bottom: 36px;
+.contacts__info--form {
+  @media (min-width: @desktop-width) {
+    background-color: white;
   }
 }
 
 .contacts__address {
   width: 140px;
-  padding-top: 14px;
+  padding-top: 17px;
   color: #444444;
   text-align: left;
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", "Helvetica", sans-serif;
   font-size: 14px;
   line-height: 19px;
 
   @media (min-width: @tablet-width) {
     font-size: 16px;
-    font-family: "Arial", sans-serif;
+    font-family: "Arial", "Helvetica", sans-serif;
     width: 160px;
     margin-top: 14px;
     padding-right: 40px;
+    padding-top: 20px;
     line-height: 20px;
     text-align: right;
   }
@@ -123,4 +126,8 @@
   @media (min-width: @desktop-width) {
     background-color: white;
   }
+}
+
+.contacts__map {
+  vertical-align: bottom;
 }
