--- a/source/less/blocks/copyright.less
+++ b/source/less/blocks/copyright.less
@@ -7,8 +7,8 @@
   text-decoration: none;
   font-size: 16px;
   line-height: 16px;
-  padding-top: 5px;
-  font-family: "Arial", sans-serif;
+  padding-top: 2px;
+  font-family: "Arial", "Helvetica", sans-serif;
   color: #444444;
 
   &:hover {
@@ -28,7 +28,7 @@
 .copyright__logo {
   width: 28px;
   height: 36px;
-  margin-top: -5px;
+  margin-top: -6px;
 }
 
 .copyright__logo svg {
