--- a/source/less/blocks/field-container.less
+++ b/source/less/blocks/field-container.less
@@ -1,3 +1,20 @@
 .field-container {
   display: flex;
+
+  margin-bottom: 3px;
+  margin-left: -19px;
+
+  @media (min-width: @tablet-width) {
+    margin-bottom: 8px;
+    margin-left: 1px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-bottom: 8px;
+    margin-left: -19px;
+  }
+}
+
+.field-container:nth-child(3) {
+  margin-bottom: 0;
 }
