--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -37,9 +37,9 @@
     border: 1px solid #ededed;
     margin-right: 40px;
     margin-left: 40px;
-    padding-left: 43px;
-    padding-top: 26px;
-    padding-bottom: 23px;
+    padding-left: 23px;
+    padding-top: 22px;
+    padding-bottom: 20px;
   }
 
   @media (min-width: @desktop-width) {
@@ -48,8 +48,9 @@
     width: 525px;
     height: 162px;
     margin-top: 0;
-    padding-top: 27px;
+    padding-top: 23px;
     padding-left: 43px;
+    padding-bottom: 9px;
   }
 
   &::before {
@@ -90,21 +91,30 @@
 }
 
 .form__label {
-  margin-right: 18px;
+  margin-right: 15px;
   font-size: 16px;
   font-weight: lighter;
   text-transform: uppercase;
-  padding-top: 8px;
+  padding-top: 6px;
   padding-bottom: 10px;
   word-wrap: nowrap;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
-    margin-right: 20px;
+    margin-right: 19px;
+    padding-top: 5px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-right: 24px;
+    margin-right: 18px;
+  }
+}
+
+.form__label--mail {
+  margin-right: 12px;
+
+  @media (min-width: @desktop-width) {
+    margin-right: 23px;
   }
 }
 
@@ -122,7 +132,7 @@
   margin-top: 27px;
   text-transform: uppercase;
   font-size: 14px;
-  line-height: 1.3em;
+  line-height: 18px;
 
   @media (min-width: @tablet-width) {
     width: 331px;
@@ -130,14 +140,14 @@
     line-height: 30px;
     padding-left: 40px;
     margin-top: 55px;
-    margin-bottom: 63px;
+    margin-bottom: 67px;
   }
 
   @media (min-width: @desktop-width) {
     padding-right: 600px;
-    margin-bottom: 62px;
+    margin-bottom: 66px;
     padding-left: 0;
-    margin-top: 30px;
+    margin-top: 32px;
   }
 }
 
@@ -165,13 +175,15 @@
   flex-grow: 1;
   padding-top: 12px;
   padding-bottom: 13px;
-  padding-left: 9px;
+  padding-left: 14px;
   font-size: 16px;
   line-height: 18px;
   text-transform: uppercase;
 
 
   @media (min-width: @tablet-width) {
+    padding-top: 10px;
+    padding-bottom: 10px;
     font-size: 20px;
     padding-left: 17px;
   }
@@ -197,7 +209,7 @@
 .form__action {
   display: flex;
   flex-direction: column;
-  margin-bottom: 35px;
+  margin-bottom: 32px;
 
   @media (min-width: @tablet-width) {
     flex-direction: row;
@@ -232,8 +244,12 @@
 .form__radio + .form__label {
   position: relative;
   display: block;
-  padding-left: 45px;
+  padding-left: 46px;
   cursor: pointer;
+
+  @media (min-width: @desktop-width) {
+    padding-left: 43px;
+  }
 }
 
 .form__radio + .form__label::before {
@@ -254,7 +270,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: 3px;
+    top: 1px;
     left: -16px;
   }
 }
@@ -286,7 +302,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    top: 14px;
+    top: 12px;
     left: -5px;
     height: 18px;
     width: 18px;
@@ -297,7 +313,7 @@
   &::after {
     content: "";
     position: absolute;
-    top: 15px;
+    top: 12px;
     left: 5px;
     width: 21px;
     height: 16px;
@@ -305,7 +321,7 @@
     background-repeat: no-repeat;
 
     @media (min-width: @tablet-width) {
-      top: 17px;
+      top: 13px;
       left: -4px;
       width: 23px;
       height: 18px;
@@ -371,15 +387,15 @@
     line-height: 24px;
     width: 600px;
     white-space: nowrap;
-    padding-top: 47px;
+    padding-top: 49px;
     padding-left: 0;
-    margin-bottom: 79px;
+    margin-bottom: 83px;
   }
 
   &::before {
     content: "";
     height: 3px;
-    margin-top: 12px;
+    margin-top: 13px;
     flex-grow: 1;
     background-color: #68b738;
     order: 2;
@@ -388,7 +404,7 @@
     width: 100vw;
 
     @media (min-width: @tablet-width) {
-      margin-top: 15px;
+      margin-top: 16px;
     }
   }
 
@@ -401,14 +417,21 @@
       position: absolute;
       z-index: 1;
       width: 100vw;
-      top: 62px;
+      top: 65px;
       right: 0;
     }
   }
 
   @media (min-width: @desktop-width) {
+    &::after {
+      top: 61px;
+    }
+  }
+
+  @media (min-width: @desktop-width) {
     width: 1220px;
-    margin-left: -41px;
+    margin-left: -40px;
+    padding-top: 45px;
   }
 
   span {
@@ -471,7 +494,7 @@
 .form__cat-info {
   @media (min-width: @tablet-width) {
     margin-left: 40px;
-    margin-right: 40px;
+    margin-right: 37px;
     margin-bottom: 71px;
   }
 
@@ -497,52 +520,52 @@
 .form__checkbox + .form__label::before {
   content: "";
   position: absolute;
-  top: 7px;
+  top: 3px;
   left: 0;
   height: 28px;
   width: 28px;
   border: 1px solid #cdcdcd;
 
   @media (min-width: @tablet-width) {
-    top: 4px;
+    top: 1px;
     left: -13px;
     height: 38px;
     width: 38px;
   }
 }
 
-.form-text__icon-mail {
+.icon-mail {
   position: absolute;
   top: 15px;
   right: 16px;
   fill: #222222;
 
   @media (min-width: @tablet-width) {
-    top: 23px;
-    right: 60px;
+    top: 19px;
+    right: 56px;
   }
 }
 
-.form__text:focus + .form-text__icon-mail {
+.form__text:focus + .icon-mail {
   fill: #68b738;
 }
 
-.form__text:invalid:not(:placeholder-shown) + .form-text__icon-mail {
+.form__text:invalid:not(:placeholder-shown) + .icon-mail {
   fill: #ff8282;
 }
 
-.form-text__icon-phone {
+.icon-phone {
   position: absolute;
   top: 13px;
-  right: 11px;
+  right: 13px;
   fill: #222222;
 
   @media (min-width: @tablet-width) {
-    top: 19px;
-    right: 52px;
+    top: 17px;
+    right: 53px;
   }
 }
 
-.form__text:focus + .form-text__icon-phone {
+.form__text:focus + .icon-phone {
   fill: #68b738;
 }
