--- a/source/less/blocks/menu.less
+++ b/source/less/blocks/menu.less
@@ -1,14 +1,26 @@
 .menu__link {
+  padding-top: 28px;
+  padding-bottom: 8px;
+  padding-right: 48px;
+  padding-left: 37px;
   position: relative;
   display: block;
-  padding-top: 22px;
-  padding-bottom: 22px;
+
   font-size: 20px;
   font-weight: 700;
   color: #111111;
+  font-family: "Oswald", "Arial", sans-serif;
   text-transform: uppercase;
   text-align: center;
   text-decoration: none;
+
+@media (min-width: @tablet-width) {
+  padding-top: 22px;
+  padding-bottom: 22px;
+  padding-right: 0;
+  padding-left: 0;
+}
+
 
   &[href]:hover {
     color: rgba(17, 17, 17, 0.6);
