--- a/source/less/blocks/more.less
+++ b/source/less/blocks/more.less
@@ -1,5 +1,5 @@
 .more__promo-title {
-  margin-top: 25px;
+  margin-top: 23px;
   margin-bottom: 0;
   font-size: 16px;
   line-height: 20px;
@@ -26,7 +26,7 @@
   margin-bottom: 20px;
   text-align: center;
   font-size: 12px;
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", "Helvetica", sans-serif;
 
   @media (min-width: @tablet-width) {
     width: 170px;
