--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -40,9 +40,9 @@
   position: relative;
   display: flex;
   flex-direction: column;
-  margin-bottom: 6px;
+  margin-bottom: 11px;
   padding-bottom: 38px;
-  padding-top: 32px;
+  padding-top: 29px;
 
   &::after {
     content: "";
@@ -85,6 +85,7 @@
   @media (min-width: @desktop-width) {
     margin-right: 0;
     margin-top: 115px;
+    height: 363px;
     margin-bottom: 10px;
     width: 213px;
     top: 29px;
