--- a/source/less/blocks/special-offer.less
+++ b/source/less/blocks/special-offer.less
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
   width: 240px;
   height: 290px;
-  margin-bottom: 36px;
+  margin-bottom: 32px;
 
   @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
     background-image: url("../img/gift-photo-mobile@2x.jpg");
@@ -16,7 +16,7 @@
   &::after {
     content: "";
     position: absolute;
-    top: 63px;
+    top: 66px;
     left: 50%;
     margin-left: -27px;
     width: 55px;
@@ -41,7 +41,7 @@
     background-size: contain;
     background-image: url("../img/gift-photo-tablet@1x.jpg");
     background-position: center center;
-    margin-bottom: 76px;
+    margin-bottom: 72px;
 
     @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
       background-image: url("../img/gift-photo-tablet@2x.jpg");
@@ -77,7 +77,7 @@
   padding-left: 37px;
   font-size: 16px;
   line-height: 18px;
-  font-family: "Arial", sans-serif;
+  font-family: "Arial", "Helvetica", sans-serif;
 
   @media (min-width: @tablet-width) {
     padding-top: 73px;
