--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -25,6 +25,11 @@
   line-height: 38px;
   text-transform: uppercase;
 
+  &:focus {
+   outline: 2px solid #444444;
+   border: none;
+  }
+
   @media (min-width: @tablet-width) {
     width: 611px;
     height: 167px;
