--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -92,6 +92,7 @@
 }
 
 .main-nav__toggle {
+  margin-top: -7px;
   background-image: url("../img/icon-mobile-menu.svg");
   width: 24px;
   height: 18px;
