--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -114,4 +114,8 @@
   @media (min-width: @tablet-width) {
     margin-top: -16px;
   }
+
+  @media (min-width: @desktop-width) {
+    margin-top: -13px;
+  }
 }
