--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -97,7 +97,7 @@
   text-transform: uppercase;
   padding-top: 6px;
   padding-bottom: 10px;
-  word-wrap: nowrap;
+  white-space: nowrap;
 
   @media (min-width: @tablet-width) {
     font-size: 20px;
@@ -128,8 +128,8 @@
 
 .form__instructions {
   padding-right: 15px;
-  margin-bottom: 37px;
-  margin-top: 27px;
+  margin-bottom: 40px;
+  margin-top: 24px;
   text-transform: uppercase;
   font-size: 14px;
   line-height: 18px;
