--- a/source/less/blocks/food-packaging.less
+++ b/source/less/blocks/food-packaging.less
@@ -3,7 +3,7 @@
   text-align: center;
   background-size: cover;
   background-repeat: no-repeat;
-  content: url("img/index-can-mobile@1x.png");
+  content: url("../img/index-can-mobile@1x.png");
   width: 280px;
   height: 270px;
 
@@ -24,7 +24,7 @@
   }
 
   @media (min-width: @desktop-width) {
-    content: url("img/index-can-desktop@1x.png");
+    content: url("../img/index-can-desktop@1x.png");
     position: absolute;
     z-index: 2;
     left: 461px;
