--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -12,6 +12,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    align-items: flex-start;
     width: 1220px;
     padding-left: 40px;
     padding-right: 40px;
@@ -46,7 +47,7 @@
     margin-right: 0;
     margin-left: 0;
     width: 525px;
-    height: 162px;
+    min-height: 162px;
     margin-top: 0;
     padding-top: 23px;
     padding-left: 43px;
