--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,4 +1,4 @@
-@import "../fonts/fonts.less";
+@import "./fonts.less";
 @import "./mixins.less";
 @import "./variables.less";
 @import "./blocks/base.less";
